# AI-Powered-Zoho-Chatbot-main

./: .dockerignore  .gitignore  README.md  pyproject.toml
AI-Powered-Zoho-Chatbot-main/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
AI-Powered-Zoho-Chatbot-main/backend/app/: __init__.py  main.py
AI-Powered-Zoho-Chatbot-main/backend/app/agents/: action_agent.py  graph.py  query_agent.py  router.py  tools.py
AI-Powered-Zoho-Chatbot-main/backend/app/api/: routes_auth.py  routes_chat.py
AI-Powered-Zoho-Chatbot-main/backend/app/schemas/: chat.py
AI-Powered-Zoho-Chatbot-main/frontend/: index.html
AI-Powered-Zoho-Chatbot-main/frontend/src/: App.tsx  api.ts  styles.css
AI-Powered-Zoho-Chatbot-main/zoho_project_assistant.egg-info/: PKG-INFO
backend/app/: main.py
backend/app/api/: routes_chat.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/services/: memory_store.py  zoho_client.py
backend/app/utils/: dates.py
backend/tests/: test_agents.py  test_memory_store.py  test_routes.py  test_toolkit.py
frontend/: package-lock.json  package.json
frontend/src/: types.ts
frontend/src/components/: ChatWindow.tsx  LoginGate.tsx  PendingActionCard.tsx
zoho_project_assistant.egg-info/: SOURCES.txt  requires.txt
