[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoho-project-assistant"
version = "0.1.0"
description = "AI-powered Zoho Projects assistant built with FastAPI, LangGraph, and React."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "itsdangerous>=2.2.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]
extend-exclude = [
  "frontend/dist",
  "output",
  "tmp",
  "zoho_project_assistant.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["backend"]
exclude = [
  "^frontend/",
  "^output/",
  "^tmp/",
  "^zoho_project_assistant\\.egg-info/",
]
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true